[package]
name = "fake-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
tokio-tungstenite = "*"
url = "*"
tokio = { version = "1.24.1", features = ["full"] } 
futures-util = "*"
futures-channel = "*"
